# nao_oscr

./: CMakeLists.txt  package.xml  setup.py
config/: nao-floating.rviz  nao.rviz
include/nao_oscr/: ball-marker.hpp  frame-marker.hpp  joint-state-pub.hpp  marker-utils.hpp  marker.hpp  markers.hpp  robot-interface.hpp
launch/: display-fixed.launch  display-gui.launch  display.launch  display_floating.launch  guidisplay.launch
scripts/: model_parse  motion_acrobatic  motion_arms  motion_arms_extend  motion_examples  nao_model_py  nao_motion_naoqi_py2  nao_motion_py
scripts/plots/: cropimg.m  plots_arms.py
scripts/utils/: floor_publisher  robot_pose_publisher
src/: nao-model-test.cpp  nao-motion-naoqi.cpp  nao-motion-rviz.cpp
src/nao_oscr/: __init__.py  nao_sim_ros_robot.py
src/utils/: ball-marker.cpp  frame-marker.cpp  joint-state-pub.cpp  marker-utils.cpp  marker.cpp  robot-interface.cpp
urdf/: README
