<?xml version="1.0"?>
<package>

  <name>nao_oscr</name>
  <version>0.0.1</version>
  <description>The nao_oscr package</description>

  <maintainer email="oramos@todo.todo">Oscar Ramos</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>naoqi_bridge_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>
  <run_depend>nao_description</run_depend>

</package>
